[package]
name = "culit"
version = "0.1.4"
edition = "2021"
description = "Custom literals in Stable Rust like `\"hello {name}\"f`"
rust-version = "1.58"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/culit"
keywords = ["custom", "literal", "proc-macro"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"

[dependencies]
# std doesn't provide us a way to get contents of a `proc_macro::Literal`
litrs = "0.5"

[build-dependencies]
version_check = "0.9"

[lib]
proc-macro = true
